# plutus-starter

./: README.md  hie.yaml  plutus-starter.cabal
app/: oracle-client.hs  oracle-pab.hs  swap-client.hs
src/Oracle/: Core.hs  Funds.hs  PAB.hs  Swap.hs  Test.hs
