cabal-version:      2.4
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:       Apache-2.0
license-files: LICENSE
author:        Benny Segers
maintainer:    segersbenny@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:  Oracle.Core
                      Oracle.Funds
                      Oracle.PAB
                      Oracle.Swap
                      Oracle.Test
    build-depends:
                      base >= 4.9 && < 5
                    , aeson
                    , bytestring
                    , containers
                    , freer-extras
                    , playground-common
                    , plutus-contract
                    , plutus-tx-plugin
                    , plutus-tx
                    , plutus-ledger
                    , data-default
                    , freer-extras
                    , plutus-ledger-api
                    , plutus-use-cases
                    , prettyprinter
                    , text
    hs-source-dirs:   src examples/src
    default-language: Haskell2010
                      -- See Plutus Tx readme
    ghc-options:      -fobject-code
                      -fno-ignore-interface-pragmas 
                      -fno-omit-interface-pragmas


executable oracle-pab
  main-is:             oracle-pab.hs
  hs-source-dirs:      app
  ghc-options:         -threaded
  build-depends:       base >= 4.9 && < 5
                     , plutus-starter
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , plutus-use-cases
                     , text
                     , prettyprinter
                     , aeson


executable oracle-client
  main-is:             oracle-client.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , bytestring
                     , regex-tdfa ^>= 1.3.1.0
                     , req ^>= 3.9.0
                     , text
                     , uuid


executable swap-client
  main-is:             swap-client.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , plutus-starter
                     , plutus-ledger
                     , plutus-pab
                     , req ^>= 3.9.0
                     , text
                     , uuid
                     , aeson
